--- a/client/gift-card/src/components/UI/Header/Header.module.css
+++ b/client/gift-card/src/components/UI/Header/Header.module.css
@@ -1,2 +1,9 @@
 .Header {
+  width: 100vw;
+  height: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
 }
