--- a/client/gift-card/src/components/Logo/Logo.module.css
+++ b/client/gift-card/src/components/Logo/Logo.module.css
@@ -1,10 +1,8 @@
 .Logo {
   background-color: rgba(175, 88, 88, 0.2);
-  padding: 4px;
   height: 100%;
   box-sizing: border-box;
-  border-radius: 4px;
-  border: 1px solid brown;
+  border-radius: 50%;
 }
 
 .Logo img {
