--- a/client/gift-card/src/components/History/History.module.css
+++ b/client/gift-card/src/components/History/History.module.css
@@ -1,10 +1,10 @@
 .History {
-  font-size: 2.5rem;
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
+  overflow: scroll;
+  max-height: 40%;
 }
 
 .History ul {
