--- a/client/gift-card/src/Containers/Auth/Auth.module.css
+++ b/client/gift-card/src/Containers/Auth/Auth.module.css
@@ -24,4 +24,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  box-shadow: 0 2px 3px #ccc;
+  border: 1px solid #eee;
+  padding: 2rem;
+  box-sizing: border-box;
 }
