feat(client): add disabled for button

--- a/client/gift-card/src/components/UI/Button/Button.module.css
+++ b/client/gift-card/src/components/UI/Button/Button.module.css
@@ -22,3 +22,14 @@
   background-color: #a79280;
   color: #fff;
 }
+
+.Login {
+  background-color: #7ce44d;
+  color: #fff;
+}
+
+.Button:disabled {
+  color: #ccc;
+  background-color: #ddd;
+  cursor: not-allowed;
+}
