--- a/client/src/components/Logo/Logo.scss
+++ b/client/src/components/Logo/Logo.scss
@@ -1,8 +1,10 @@
+@import '../../variables.scss';
+
 .Logo {
   background-color: rgba(175, 88, 88, 0.2);
   height: 100%;
   box-sizing: border-box;
-  border-radius: 50%;
+  border-radius: $border-radius-03;
 }
 
 .Logo img {
