--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -8,6 +8,10 @@ $highlight: #344e41;
 $success: lightgreen;
 $error: crimson;
 
+/* Card Variables */
+$card-width: 16rem;
+$card-height: 21rem;
+
 /* App Spacing */
 $spacing-1: 0.0625rem;
 $spacing-4: 0.25rem;
@@ -94,6 +98,12 @@ $col-width-01: 25%;
 $col-width-02: 12.5%;
 $col-width-03: 6.2%;
 $col-width-04: 6.25%;
+
+/* font sizes */
+$font-size-00: 0.5rem;
+$font-size-01: 1rem;
+$font-size-02: 1.5rem;
+$font-size-03: 2rem;
 
 /* font weights */
 $font-weight-01: 300;
