--- a/client/src/Containers/Account/Account.scss
+++ b/client/src/Containers/Account/Account.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .Account {
   height: 100vh;
   overflow: scroll;
@@ -28,5 +30,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem;
+  padding: $spacing-24;
 }
