--- a/client/src/Containers/Admin/Admin.scss
+++ b/client/src/Containers/Admin/Admin.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .Admin {
   height: 100vh;
   overflow: scroll;
@@ -27,6 +29,6 @@
   text-align: center;
   box-shadow: 0 2px 3px #ccc;
   border: 1px solid #eee;
-  padding: 2rem;
+  padding: $spacing-32;
   box-sizing: border-box;
 }
