--- a/client/src/Containers/Home/Home.scss
+++ b/client/src/Containers/Home/Home.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .Home {
   height: 100vh;
   overflow: scroll;
@@ -29,5 +31,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem;
+  padding: $spacing-24;
 }
