--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -1,5 +1,7 @@
+@import '../../variables.scss';
+
 .History {
-  font-size: 1rem;
+  font-size: $font-size-01;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,5 +15,5 @@
 }
 
 .History li {
-  margin: 1rem 0;
+  margin: $spacing-16 0;
 }
