--- a/client/src/components/UI/Banner/Banner.scss
+++ b/client/src/components/UI/Banner/Banner.scss
@@ -1,11 +1,13 @@
+@import '../../../variables.scss';
+
 .Banner {
   width: 100%;
-  height: 3rem;
+  height: $spacing-48;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #cc8d80;
   color: white;
-  font-size: 1.5rem;
+  font-size: $font-size-02;
 }
