--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -1,12 +1,11 @@
 /* App Colors */
-$primary-color: #588157;
-$secondary-color: #a3b18a;
+$primary-color: #3366ff;
+$secondary-color: #449bff;
 $bg-white: #fff;
-$off-white: #dad7cd;
-$subheader: #3a5a40;
-$highlight: #344e41;
-$success: lightgreen;
-$error: crimson;
+$off-white: #f7f6f3;
+$success: #70d62c;
+$warning: #ffe138;
+$error: #ff6d1e;
 
 /* Card Variables */
 $card-width: 16rem;
@@ -117,3 +116,79 @@ $shadow-02: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
 $shadow-03: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
 $shadow-04: 0 12px 24px 0 rgba(0, 0, 0, 0.1);
 $shadow-05: -6px -6px 8px 0 rgba(0, 0, 0, 0.1);
+
+$color-primary-100: #d6e4ff;
+$color-primary-200: #adc8ff;
+$color-primary-300: #84a9ff;
+$color-primary-400: #6690ff;
+$color-primary-500: #3366ff;
+$color-primary-600: #254edb;
+$color-primary-700: #1939b7;
+$color-primary-800: #102693;
+$color-primary-900: #091a7a;
+$color-primary-transparent-100: rgba(51, 102, 255, 0.08);
+$color-primary-transparent-200: rgba(51, 102, 255, 0.16);
+$color-primary-transparent-300: rgba(51, 102, 255, 0.24);
+$color-primary-transparent-400: rgba(51, 102, 255, 0.32);
+$color-primary-transparent-500: rgba(51, 102, 255, 0.4);
+$color-primary-transparent-600: rgba(51, 102, 255, 0.48);
+$color-success-100: #eefcd4;
+$color-success-200: #d9faab;
+$color-success-300: #baf27f;
+$color-success-400: #9ce65d;
+$color-success-500: #70d62c;
+$color-success-600: #53b820;
+$color-success-700: #3b9a16;
+$color-success-800: #267c0e;
+$color-success-900: #176608;
+$color-success-transparent-100: rgba(112, 214, 44, 0.08);
+$color-success-transparent-200: rgba(112, 214, 44, 0.16);
+$color-success-transparent-300: rgba(112, 214, 44, 0.24);
+$color-success-transparent-400: rgba(112, 214, 44, 0.32);
+$color-success-transparent-500: rgba(112, 214, 44, 0.4);
+$color-success-transparent-600: rgba(112, 214, 44, 0.48);
+$color-info-100: #d9f2ff;
+$color-info-200: #b4e1ff;
+$color-info-300: #8ecdff;
+$color-info-400: #72baff;
+$color-info-500: #449bff;
+$color-info-600: #3178db;
+$color-info-700: #2259b7;
+$color-info-800: #153e93;
+$color-info-900: #0d2b7a;
+$color-info-transparent-100: rgba(68, 155, 255, 0.08);
+$color-info-transparent-200: rgba(68, 155, 255, 0.16);
+$color-info-transparent-300: rgba(68, 155, 255, 0.24);
+$color-info-transparent-400: rgba(68, 155, 255, 0.32);
+$color-info-transparent-500: rgba(68, 155, 255, 0.4);
+$color-info-transparent-600: rgba(68, 155, 255, 0.48);
+$color-warning-100: #fffbd7;
+$color-warning-200: #fff6af;
+$color-warning-300: #fff087;
+$color-warning-400: #ffea69;
+$color-warning-500: #ffe138;
+$color-warning-600: #dbbd28;
+$color-warning-700: #b79b1c;
+$color-warning-800: #937a11;
+$color-warning-900: #7a620a;
+$color-warning-transparent-100: rgba(255, 225, 56, 0.08);
+$color-warning-transparent-200: rgba(255, 225, 56, 0.16);
+$color-warning-transparent-300: rgba(255, 225, 56, 0.24);
+$color-warning-transparent-400: rgba(255, 225, 56, 0.32);
+$color-warning-transparent-500: rgba(255, 225, 56, 0.4);
+$color-warning-transparent-600: rgba(255, 225, 56, 0.48);
+$color-danger-100: #ffedd2;
+$color-danger-200: #ffd5a4;
+$color-danger-300: #ffb878;
+$color-danger-400: #ff9c56;
+$color-danger-500: #ff6d1e;
+$color-danger-600: #db4e15;
+$color-danger-700: #b7350f;
+$color-danger-800: #932009;
+$color-danger-900: #7a1105;
+$color-danger-transparent-100: rgba(255, 109, 30, 0.08);
+$color-danger-transparent-200: rgba(255, 109, 30, 0.16);
+$color-danger-transparent-300: rgba(255, 109, 30, 0.24);
+$color-danger-transparent-400: rgba(255, 109, 30, 0.32);
+$color-danger-transparent-500: rgba(255, 109, 30, 0.4);
+$color-danger-transparent-600: rgba(255, 109, 30, 0.48);
