--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -5,9 +5,8 @@
   height: $card-height;
   padding: $spacing-16;
   box-sizing: border-box;
-  background-color: #a8b9bd;
-  border: 1px solid #7c8486;
-  box-shadow: $shadow-02;
+  background-color: $secondary-color;
+  box-shadow: $shadow-04;
   border-radius: $border-radius-03;
 }
 
