--- a/client/src/components/Card/Stamp/Stamp.scss
+++ b/client/src/components/Card/Stamp/Stamp.scss
@@ -5,8 +5,7 @@
   height: $spacing-64;
   background-color: white;
   border-radius: $border-radius-03;
-  border: 1px solid #979797;
-  margin: 0 2px;
+  margin: 0 $spacing-4;
   display: flex;
   flex-direction: row;
   align-items: center;
