--- a/client/src/components/UI/Banner/Banner.scss
+++ b/client/src/components/UI/Banner/Banner.scss
@@ -2,12 +2,12 @@
 
 .Banner {
   width: 100%;
-  height: $spacing-48;
+  height: $spacing-56;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #cc8d80;
+  background-color: $primary-color;
   color: white;
   font-size: $font-size-02;
 }
