--- a/client/src/components/UI/WelcomeBar/WelcomeBar.scss
+++ b/client/src/components/UI/WelcomeBar/WelcomeBar.scss
@@ -2,7 +2,7 @@
 
 .Header {
   width: 100vw;
-  height: $spacing-48;
+  // height: $spacing-48;
   display: flex;
   flex-direction: column;
   align-items: center;
