form styling updates

--- a/client/src/Containers/Auth/Auth.scss
+++ b/client/src/Containers/Auth/Auth.scss
@@ -22,13 +22,12 @@
   align-items: center;
 }
 
-.FormContainer form {
+.FormElements {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  box-shadow: 0 2px 3px #ccc;
-  border: 1px solid #eee;
-  padding: $spacing-32;
+  padding: $spacing-16 $spacing-32;
   box-sizing: border-box;
+  border-radius: $border-radius-04;
 }
