--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   overflow: scroll;
-  max-height: 40%;
+  max-height: 70vh;
 }
 
 .History ul {
@@ -16,4 +16,11 @@
 
 .History li {
   margin: $spacing-16 0;
+}
+
+.singleStampInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
