change banner height

--- a/client/src/components/UI/Banner/Banner.scss
+++ b/client/src/components/UI/Banner/Banner.scss
@@ -3,6 +3,7 @@
 .Banner {
   width: 100%;
   height: $spacing-56;
+  padding: $spacing-8;
   display: flex;
   flex-direction: column;
   align-items: center;
