change view of id and qr code

--- a/client/src/hoc/Layout/Layout.scss
+++ b/client/src/hoc/Layout/Layout.scss
@@ -1,5 +1,7 @@
+@import '../../variables.scss';
+
 .Layout {
   display: block;
-  background-color: #ebebeb;
+  background-color: $off-white;
   height: 100vh;
 }
