--- a/client/src/Containers/Home/Home.scss
+++ b/client/src/Containers/Home/Home.scss
@@ -33,3 +33,16 @@
   justify-content: space-between;
   padding: $spacing-24;
 }
+
+.changeIdButton {
+  width: 250px;
+  height: 160px;
+  padding: $spacing-8;
+  background-color: $off-white;
+}
+.changeIdButton,
+.changeIdButton:active,
+.changeIdButton:focus {
+  border: none;
+  outline: none;
+}
